# AAl-Khaser

./: README.md
AntiAnalysisProofSample/: .gitignore  settings.gradle
AntiAnalysisProofSample/app/: build.gradle
AntiAnalysisProofSample/app/release/: output-metadata.json
AntiAnalysisProofSample/app/src/androidTest/java/com/experiments/antianalysisproofsample/: ExampleInstrumentedTest.java
AntiAnalysisProofSample/app/src/main/: AndroidManifest.xml
AntiAnalysisProofSample/app/src/main/cpp/: CMakeLists.txt  debuggerdetector.cpp  delayedexecutor.cpp  emulatordetector.cpp  filetamperingdetector.cpp  hookdetector.cpp  memorytamperingdetector.cpp  rootdetector.cpp  timedetector.cpp  virtualizationdetector.cpp
AntiAnalysisProofSample/app/src/main/cpp/arch/armeabi-v7a/: syscall_arch.h
AntiAnalysisProofSample/app/src/main/cpp/arch/x86/: syscall_arch.h
AntiAnalysisProofSample/app/src/main/cpp/common/: common.c  common.h  syscalls.h
AntiAnalysisProofSample/app/src/main/cpp/genuine/: README.md  am-proxy.c  am-proxy.h  anti-xposed.c  anti-xposed.h  classloader.cpp  classloader.h  common.c  common.h  epic-field.c  epic-method.c  epic.c  epic.h  inline.c  inline.h  openat.c  openat.h  plt.c  plt.h
AntiAnalysisProofSample/app/src/main/cpp/hook/: customsyscalls.c  customsyscalls.h
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/: EvasiveControlsActivity.java  MainActivity.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/checkers/environment/: DebuggerDetector.java  EmulatorDetector.java  HookDetector.java  NetworkDetector.java  RootDetector.java  VirtualizationDetector.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/checkers/generic/: DelayedExecutor.java  TimeDetector.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/checkers/tampering/: FileTamperingDetector.java  GenericDetector.java  MemoryTamperingDetector.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/models/: EvasiveControls.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/models/safetynet/: AttestationStatement.java  SafetyNetWrapper.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/models/sensor/: AccelerometerSensorEventListener.java  BaseSensorListener.java  GyroscopeSensorEventListener.java
AntiAnalysisProofSample/app/src/main/java/com/experiments/antianalysisproofsample/utils/: BooleanHolder.java  GenericHelper.java
AntiAnalysisProofSample/app/src/main/res/layout/: activity_evasive_controls.xml  activity_main.xml
AntiAnalysisProofSample/app/src/main/res/values/: strings.xml  themes.xml
AntiAnalysisProofSample/app/src/main/res/values-night/: themes.xml
AntiAnalysisProofSample/app/src/test/java/com/experiments/antianalysisproofsample/: ExampleUnitTest.java
Documentation/Sources/: .gitignore  main.tex
Documentation/Sources/sections/: taxonomy.tex
Documentation/Sources/tables/: evasive.tex
